# repository-release-readiness-scorecard

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
examples/sample-repo/: README.md  pyproject.toml
repository_release_readiness_scorecard/: __main__.py
tests/: test_cli.py
